# a2a-poc-with-banking-sample

./: .env.example  ARCHITECTURE.md  BENCHMARK_SUPPORT.md  README.md  main.py  pyproject.toml  start_all.py
agents/kyc_agent/: __main__.py  agent.py  agent_executor.py  tools.py
agents/loan_agent/: __main__.py  agent.py  agent_executor.py  tools.py
agents/transaction_agent/: __main__.py  agent.py  agent_executor.py  tools.py
client/: monolith_orchestrator.py  orchestrator.py  run_benchmarks.py  subgraph_orchestrator.py  test_banking.py  test_monolith.py  test_subgraph.py
common/: mock_data.py
observability/: logger.py  tracing.py
